# tkinterplaceholder

./: README.md  pyproject.toml  requirements.txt
src/tkinterplaceholder/: widgets.py
tests/: main.py
